...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_navigation"
        >

...

                <ImageView
                    android:id="@+id/userNameIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_marginTop="2dp"
                    android:src="@drawable/profile24px"
                    app:layout_constraintBottom_toBottomOf="@+id/userNameTxt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/userNameTxt" />
...

                <ImageView
                    android:id="@+id/userRoleIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/userRoleTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="Donor"
                    android:textColor="#AF1B1B"
                    android:textSize="18sp"
...

                <ImageView
                    android:id="@+id/reminderIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/reminderTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/leaderboardTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Leaderboard"
                android:textSize="30sp"
                android:textColor="#C45508"
...

            <TextView
                android:id="@+id/refreshTimestampTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/leaderboardOneTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Top Food Donors of the Week"
                android:textSize="20sp"
                android:textColor="#C45508"
...

            <TextView
                android:id="@+id/weeklyStatusTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:src="@drawable/firstplace"
                android:layout_marginLeft="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/leaderboardOneFirstTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/leaderboardOneFirstTxt" />
...

            <TextView
                android:id="@+id/leaderboardOneFirstQtyTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/leaderboardOneSecondTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/leaderboardOneSecondQtyTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/leaderboardOneThirdTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/leaderboardOneThirdQtyTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/leaderboardOneFourthTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/leaderboardOneFourthQtyTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/leaderboardOneFifthTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/leaderboardOneFifthQtyTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/leaderboardTwoTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Top Food Donors of All Time"
                android:textColor="#C45508"
                android:textSize="20sp"
...
                android:src="@drawable/firstplace"
                android:layout_marginLeft="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/leaderboardTwoFirstTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/leaderboardTwoFirstTxt" />
...

            <TextView
                android:id="@+id/leaderboardTwoFirstQtyTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/leaderboardTwoSecondTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/leaderboardTwoSecondQtyTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/leaderboardTwoThirdTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/leaderboardTwoThirdQtyTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/leaderboardTwoFourthTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/leaderboardTwoFourthQtyTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/leaderboardTwoFifthTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/leaderboardTwoFifthQtyTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
