<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="Home"
        />

    <item
        android:id="@+id/food"
        android:enabled="true"
        android:icon="@drawable/dish"
        android:title="Donate Food"
        />

    <item
        android:id="@+id/schedule"
        android:enabled="true"
        android:title="Schedule"
        android:icon="@drawable/schedule"
        />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/profile128px"
        android:title="Profile"
        />
</menu>