...
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:ems="15"
            android:hint="Email"
            android:inputType="textEmailAddress"
...
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEdtWrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:ems="15"
            android:hint="Password"
            android:inputType="textPassword"
...
        android:src="@drawable/showpassword"
        app:layout_constraintBottom_toBottomOf="@+id/pwEdtWrapper"
        app:layout_constraintEnd_toEndOf="@+id/pwEdtWrapper"
        app:layout_constraintTop_toTopOf="@+id/pwEdtWrapper" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:text="SIGN IN"
        android:textColor="@color/white"
...
