...
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation"
        android:layout_marginTop="5dp"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
            android:backgroundTint="#F6DABA"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/plus" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewFood"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
...
